# aiu-chat

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
aiu_chat/: __init__.py  cli.py  config.py
aiu_chat/agent/: agg_tool.py  analytics.py  catalog.py  chart.py  concept.py  dataapp_answer.py  entities.py  llm.py  nm_answer.py  nop_answer.py  orchestrator.py  prompts.py  retriever.py  sql_tool.py  text_to_sql.py  turn_log.py
aiu_chat/eval/: runner.py
aiu_chat/ingest/: acronyms.py  build_catalog.py  build_cloud_db.py  build_entities.py  build_index.py  datasets.py  discover_pdfs.py  docs.py  download_datasets.py  download_ourairports.py  pdf.py  scrape_docs.py
aiu_chat/sources/: chatlog.py  dataapp.py  nm_live.py  nop.py
app/: about_page.py  admin_view.py  fingerprint.py  streamlit_app.py
app/pages/: 1_About.py
data/: aiu_cloud.duckdb  catalog.json  entities.json  entity_aliases_seed.json
docs/: dataapp_api.md
docs/design/: README.md  aggregation-agent.md  entity-layer.md  multi-source-planner.md  per-source-fanout.md
scripts/: com.aiuchat.refresh.plist.example  refresh.sh
tests/: test_acronyms.py  test_agg_tool.py  test_analytics.py  test_build_entities.py  test_catalog_drift.py  test_chart.py  test_concept.py  test_dataapp_fanout.py  test_entities_resolver.py  test_eval_scoring.py  test_fixes.py  test_llm.py  test_orchestrator.py  test_pdf.py  test_sources.py  test_sql_tool.py  test_text_to_sql.py  test_turn_log.py
tests/eval/: gold.yaml
