[project]
name = "aiu-chat"
version = "0.1.0"
description = "Local, offline hybrid-RAG chatbot over EUROCONTROL AIU (ansperformance.eu) ANS performance data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Quinten Goens" }]

dependencies = [
    "duckdb>=1.1.0",
    "requests>=2.31.0",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
    "pandas>=2.0.0",
    "sqlglot>=25.0.0",        # parse/validate LLM-generated SQL (read-only enforcement)
    "beautifulsoup4>=4.12.0", # doc scraping
    "lxml>=5.0.0",
    "pyyaml>=6.0",            # gold eval set
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
aiu-chat-cli = "aiu_chat.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aiu_chat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
